<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_level"
    tools:context="com.sudo_pacman.memorygame.ui.screens.LevelScreen">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_txt_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_btn_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />


    <LinearLayout
        android:id="@+id/container_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_txt_top">

        <TextView
            android:id="@+id/img_txt_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_extra_bold"
            android:text="@string/memory"
            android:textColor="@color/white"
            android:textSize="46sp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:includeFontPadding="false"
            />

        <TextView
            android:id="@+id/img_txt_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_extra_bold"
            android:text="@string/game"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:includeFontPadding="false"
            android:layout_marginTop="-20dp"
            />


        <ImageView
            android:id="@+id/img_txt_puzzle"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:src="@drawable/bg_game_name"
            android:layout_marginTop="-10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_extra_bold"
            android:text="@string/game_title"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_marginTop="-42dp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:includeFontPadding="false"
            />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_btn_top">

        <ImageView
            android:id="@+id/btn_easy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_easy"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:maxWidth="300dp"
            android:maxHeight="70dp"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/btn_easy"
            app:layout_constraintBottom_toBottomOf="@id/btn_easy"
            app:layout_constraintStart_toStartOf="@id/btn_easy"
            app:layout_constraintEnd_toEndOf="@id/btn_easy"
            android:layout_marginBottom="14dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/easy"
                android:fontFamily="@font/rubik_extra_bold"
                android:gravity="center|start"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:includeFontPadding="false"
                android:paddingHorizontal="16dp"
                />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:src="@drawable/ic_play"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_easy"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/btn_medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_medium"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:maxWidth="300dp"
            android:maxHeight="70dp"
            />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/btn_medium"
            app:layout_constraintBottom_toBottomOf="@id/btn_medium"
            app:layout_constraintStart_toStartOf="@id/btn_medium"
            app:layout_constraintEnd_toEndOf="@id/btn_medium"
            android:layout_marginBottom="14dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/medium"
                android:fontFamily="@font/rubik_extra_bold"
                android:gravity="center|start"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:includeFontPadding="false"
                android:paddingHorizontal="16dp"
                />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:src="@drawable/ic_play"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_medium"
        android:layout_marginTop="8dp">


        <ImageView
            android:id="@+id/btn_hard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_hard"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:maxWidth="300dp"
            android:maxHeight="70dp"
            />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/btn_hard"
            app:layout_constraintBottom_toBottomOf="@id/btn_hard"
            app:layout_constraintStart_toStartOf="@id/btn_hard"
            app:layout_constraintEnd_toEndOf="@id/btn_hard"
            android:layout_marginBottom="14dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/hard"
                android:fontFamily="@font/rubik_extra_bold"
                android:gravity="center|start"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:includeFontPadding="false"
                android:paddingHorizontal="16dp"
                />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:src="@drawable/ic_play"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

































